# src/main/java/com/nttdata/proyectos/pagos/dto/PaymentResponseDTO.java
@@ -1,63 +1,34 @@
 package com.nttdata.proyectos.pagos.dto;
 
+import io.swagger.v3.oas.annotations.media.Schema;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
 import java.math.BigDecimal;
 import java.time.LocalDate;
 
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
 public class PaymentResponseDTO {
+
+    @Schema(description = "ID del pago", example = "1")
     private Long id;
+
+    @Schema(description = "Número de la tarjeta", example = "1234567812345678")
     private String cardNumber;
+
+    @Schema(description = "Cantidad del pago", example = "150.50")
     private BigDecimal amount;
+
+    @Schema(description = "Fecha de pago", example = "2023-10-20")
     private LocalDate paymentDate;
+
+    @Schema(description = "Descripción del pago", example = "Pago mensual tarjeta de crédito")
     private String description;
 
-    public PaymentResponseDTO() {}
-
-    public PaymentResponseDTO(Long id, String cardNumber, BigDecimal amount, LocalDate paymentDate, String description) {
-        this.id = id;
-        this.cardNumber = cardNumber;
-        this.amount = amount;
-        this.paymentDate = paymentDate;
-        this.description = description;
-    }
-
     // Getters y Setters
-    public Long getId() {
-        return id;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public String getCardNumber() {
-        return cardNumber;
-    }
-
-    public void setCardNumber(String cardNumber) {
-        this.cardNumber = cardNumber;
-    }
-
-    public BigDecimal getAmount() {
-        return amount;
-    }
-
-    public void setAmount(BigDecimal amount) {
-        this.amount = amount;
-    }
-
-    public LocalDate getPaymentDate() {
-        return paymentDate;
-    }
-
-    public void setPaymentDate(LocalDate paymentDate) {
-        this.paymentDate = paymentDate;
-    }
-
-    public String getDescription() {
-        return description;
-    }
-
-    public void setDescription(String description) {
-        this.description = description;
-    }
 }
